# heightVision

./: .gitignore  CMakeLists.txt  connectserver.txt  my.md  package_plugin.ps1  ~$使用说明书.docx
HeiVersion/src/: MainWindow.cpp  MainWindow.h
src/: CameraWorker.cpp  CameraWorker.h  MainWindow.cpp  MainWindow.h  QtCamera.cpp  QtCamera.h  camerapara.cpp  camerapara.h  main.cpp
src/Scene/: ImageDisplayScene.cpp  ImageDisplayScene.h  ImageSceneBase.cpp  ImageSceneBase.h  zoomScene.cpp  zoomScene.h
src/Widget/: HeightMainWindow.cpp  HeightMainWindow.h
src/common/: CMakeLists.txt
src/common/Scene/: ImageDisplayScene.cpp  ImageDisplayScene.h  ImageSceneBase.cpp  ImageSceneBase.h
src/common/Widget/: CustomTitleBar.cpp  CustomTitleBar.h  baseWidget.cpp  baseWidget.h
src/common/tools/: bscvTool.cpp  bscvTool.h
src/heightMeature/Widget/: testHWidget.cpp  testHWidget.h
src/heightMeature/core/: testHeight.cpp  testHeight.h
src/interfaces/: CalibInterface.h  HeightPluginInterface.h  IMatchPlugin.h  Imageprocess.h  MatchParams.h  orionvisionglobal.h
src/plugins/Calib/: CMakeLists.txt  CalibWidget.cpp  CalibWidget.h  Calib_plugin.h  Calib_plugin.json
src/plugins/Calib/CameraCalib/: CameraCalibPlugin.h  CameraCalib_plugin.json
src/plugins/Calib/CameraCalib/Core/: Calib.cpp  Calib.h
src/plugins/Calib/CameraCalib/Scene/: CameraCalibScene.cpp  CameraCalibScene.h
src/plugins/Calib/CameraCalib/Widget/: CameraCalibWidget.cpp  CameraCalibWidget.h
src/plugins/Calib/CameraWarperspect/: CameraWarpective.h
src/plugins/Calib/CameraWarperspect/Core/: Warpective.cpp  Warpective.h
src/plugins/Calib/CameraWarperspect/Scene/: CameraWarpectiveScene.cpp  CameraWarpectiveScene.h
src/plugins/Calib/CameraWarperspect/Widget/: CameraWarpectiveWidget.cpp  CameraWarpectiveWidget.h
src/plugins/Calib/Mirrorcalib/: MirrorCalibPlugin.h  MirrorCalib_plugin.json
src/plugins/Calib/Mirrorcalib/Core/: MirrorCalib.cpp  MirrorCalib.h
src/plugins/Calib/Mirrorcalib/Scene/: MirrorScene.cpp  MirrorScene.h
src/plugins/Calib/Mirrorcalib/Widget/: MirrorCalibWidget.cpp  MirrorCalibWidget.h
src/plugins/heightMeature/: CMakeLists.txt  HeightMeaturePlugin.h  height_meature_plugin.json  ku.txt
src/plugins/heightMeature/Scene/: HeightScene.cpp  HeightScene.h
src/plugins/heightMeature/Widget/: HeightMainWindow.cpp  HeightMainWindow.h
src/plugins/heightMeature/core/: testHeight.cpp  testHeight.h
src/plugins/template/: CMakeLists.txt  TemplatePlugin.h  resources.qrc  template_global.h  template_plugin.json
src/plugins/template/Scene/: MatchScene.cpp  MatchScene.h
src/plugins/template/Widget/: matchWidget.cpp  matchWidget.h  paraWidget.cpp  paraWidget.h
src/plugins/template/camera/: ImageProcess.cpp  ImageProcess.h  camera.cpp  camera.h
src/plugins/template/core/: MatchParams.h  TemplateManager.cpp  TemplateManager.h
src/plugins/template/core/client/: UDPMatReceiver.cpp  UDPMatReceiver.h
src/plugins/template/tools/: FindBSCV.cmake
src/plugins/template/tools/bscv/: autoFocus.h  hough.h  imgproc.h  templMatchTypes.h  templmatch.h
src/plugins/template/tools/bscv/include/bscv/: autoFocus.h  basic.h  systemService.h  templmatch.h  tools.h
src/plugins/template/tools/bscv/include/opencv2/core/cuda/: border_interpolate.hpp
src/template/Widget/: matchWidget.cpp  matchWidget.h
src/template/core/: Match.h  MatchTypes.h  TemplateManager.cpp  TemplateManager.h
src/tools/: bscvTool.cpp  bscvTool.h  bscvTool1.cpp  bscvTool1.h
src/widget/heightMeature/Widget/: testHWidget.cpp  testHWidget.h
src/widget/heightMeature/core/: testHeight.cpp  testHeight.h
src/zoomScene/: ImageSceneBase.cpp  ImageSceneBase.h  zoomScene.cpp  zoomScene.h
